@startuml BCE_SuspendUserAccount
title Suspend User Account

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "manage_users.js" as B {
  +openDelete(user)
  +loadData(filters)
}

class "SuspendUserAccountController" as C {
  +bool
  suspend(int user_id)
}

class "Account" as E1 {
  +void
  suspend(int user_id)
}

class "Session" as E2 {
  +Session
  findSessionByUserId(int id)
  --
  +bool
  deactivate(string session_id)
}

B -- C
C -- E1
C -- E2

@enduml
